--- a/DecoratingAppOnly/Base.lproj/Main.storyboard
+++ b/DecoratingAppOnly/Base.lproj/Main.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lKK-mF-YO2">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="578"/>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lKK-mF-YO2">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AF2-8V-2J5">
                                 <rect key="frame" x="307" y="53" width="30" height="30"/>
@@ -31,27 +31,37 @@
                                     <action selector="addModelButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VTP-ut-gAE"/>
                                 </connections>
                             </button>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z39-8e-8eu">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.89999997615814209" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPM-hB-TCu">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Load" id="ad4-vi-G4M">
+                                    <barButtonItem title="Load" id="CdK-14-bqk">
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <action selector="loadBarButtonPressed:" destination="BYZ-38-t0r" id="OXE-mI-8Ff"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="vhG-Mp-jvW"/>
+                                    <barButtonItem systemItem="refresh" id="3nL-wm-zaq">
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1Ve-Gl-pRx"/>
-                                    <barButtonItem systemItem="refresh" id="9Bi-4g-lHs">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="sWj-Os-IBb"/>
+                                    <barButtonItem systemItem="save" id="BpZ-rv-lDi">
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aYv-3L-C4n"/>
-                                    <barButtonItem title="Save" id="ewp-9I-tnl">
-                                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <connections>
+                                            <action selector="saveBarButtonPressed:" destination="BYZ-38-t0r" id="ytu-lu-mpj"/>
+                                        </connections>
                                     </barButtonItem>
                                 </items>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </toolbar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Move camera around to detect planes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mlh-CO-RbZ">
-                                <rect key="frame" x="0.0" y="586" width="359" height="21"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Move camera around to detect planes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9GP-wT-0Vj">
+                                <rect key="frame" x="0.0" y="579" width="375" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="YRa-Bp-vOD"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -59,18 +69,21 @@
                         <constraints>
                             <constraint firstItem="lKK-mF-YO2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7Qt-oD-SgM"/>
                             <constraint firstItem="lKK-mF-YO2" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Gho-cG-9Dk"/>
-                            <constraint firstItem="Z39-8e-8eu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Nm5-Oc-VF1"/>
+                            <constraint firstItem="9GP-wT-0Vj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="JNy-Is-qbD"/>
                             <constraint firstItem="lKK-mF-YO2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OBl-Al-T6N"/>
-                            <constraint firstItem="Z39-8e-8eu" firstAttribute="top" secondItem="mlh-CO-RbZ" secondAttribute="bottom" constant="556" id="dBz-sx-Zsq"/>
-                            <constraint firstItem="Z39-8e-8eu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hRS-vN-5ir"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mlh-CO-RbZ" secondAttribute="trailing" constant="80" id="lw6-G1-zt8"/>
+                            <constraint firstItem="sPM-hB-TCu" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="R8X-y1-vRQ"/>
+                            <constraint firstItem="sPM-hB-TCu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="T5l-mj-Xhp"/>
+                            <constraint firstItem="9GP-wT-0Vj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YmD-R5-Zmd"/>
+                            <constraint firstItem="lKK-mF-YO2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="bKR-kO-SRn"/>
                             <constraint firstItem="lKK-mF-YO2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="neZ-8K-1YD"/>
-                            <constraint firstItem="mlh-CO-RbZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="o87-W5-Gq2"/>
+                            <constraint firstItem="sPM-hB-TCu" firstAttribute="top" secondItem="9GP-wT-0Vj" secondAttribute="bottom" id="ocb-bB-T9f"/>
+                            <constraint firstItem="sPM-hB-TCu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="uoJ-od-paN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="addModel" destination="AF2-8V-2J5" id="q1t-38-gBj"/>
+                        <outlet property="label" destination="9GP-wT-0Vj" id="9Lz-vb-Tb5"/>
                         <outlet property="sceneView" destination="lKK-mF-YO2" id="7wb-mw-05Q"/>
                     </connections>
                 </viewController>
